integration-tests/src/test/resources/openshift/servicememberroll.yaml
apiVersion: maistra.io/v1
kind: ServiceMeshMemberRoll
metadata:
  name: default
  namespace: istio-system
spec:
  members:
  - OPERATOR_NAMESPACE
  - DOMAIN_NAMESPACE
